--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -86,6 +86,7 @@ body{
 	height: 50px;
 	line-height: 50px;
 	background: url(@/assets/images/banner/top-title-bg.png) no-repeat;
+	background-size: 100% 100%;
 	display: flex;
 	align-items: center;
 
